<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/activity_main_drawer_arts"
            android:title="@string/drawer_arts" />
        <item
            android:id="@+id/activity_main_drawer_business"
            android:title="@string/drawer_business" />
        <item
            android:id="@+id/activity_main_drawer_entrepreneurs"
            android:title="@string/drawer_business" />
        <item
            android:id="@+id/activity_main_drawer_politics"
            android:title="@string/drawer_politics" />
        <item
            android:id="@+id/activity_main_drawer_sports"
            android:title="@string/drawer_sports" />
        <item
            android:id="@+id/activity_main_drawer_travel"
            android:title="@string/drawer_travel" />
    </group>
</menu>