<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.activities.SearchActivity"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

    <EditText
        android:id="@+id/activity_search_search_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:hint="@string/search_query"
        android:backgroundTint="@color/colorPrimary"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_search_date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/begin_date"
                android:paddingStart="5dp"
                android:textSize="12sp"/>

            <EditText
                android:id="@+id/activity_search_begin_date_edt"
                android:layout_width="170dp"
                android:layout_height="42dp"
                android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                android:inputType="date"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/end_date"
                android:textSize="12sp"/>

            <EditText
                android:id="@+id/activity_search_end_date_edt"
                android:layout_width="170dp"
                android:layout_height="42dp"
                android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                android:inputType="date"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/activity_search_chb_arts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/arts"/>

            <CheckBox
                android:id="@+id/activity_search_chb_business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/business"/>

            <CheckBox
                android:id="@+id/activity_search_chb_entrepreneurs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/entrepreneurs"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/activity_search_chb_politics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/politics"/>

            <CheckBox
                android:id="@+id/activity_search_chb_sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/sports"/>

            <CheckBox
                android:id="@+id/activity_search_chb_travel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel"
                android:textSize="12sp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/activity_search_search_button"
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:theme="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@color/colorWhiteText"
            android:background="@color/colorPrimary"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_notification_switch_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        
        <Switch
            android:id="@+id/activity_notification_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enable Notifications (once per day)"
            android:paddingStart="5dp"
            android:textSize="12sp"/>

    </LinearLayout>

</LinearLayout>